Update 'backend-tests-go-cbmbrkdh' component image to: quay.io/rhtap_qe/backend-tests-go-cbmbrkdh:3f8ebf44064c3b438396db891d542b1c17d91a80@sha256:ff8efcfb967b191d6567baef3fd6086991ccbbc91ba14d0b2bbf192d809538b1

--- a/components/backend-tests-go-cbmbrkdh/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-cbmbrkdh/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-cbmbrkdh
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-cbmbrkdh:3f8ebf44064c3b438396db891d542b1c17d91a80@sha256:ff8efcfb967b191d6567baef3fd6086991ccbbc91ba14d0b2bbf192d809538b1
+          name: container-image
